# piratepod

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
clients/lander/: package-lock.json  package.json  tailwind.config.mjs
clients/lander/src/layouts/: Layout.astro
clients/lander/src/pages/: index.astro
clients/web/: index.html  package-lock.json  package.json  tailwind.config.ts
clients/web/src/: index.css  main.tsx  router.tsx
clients/web/src/components/: stage-progress.tsx
clients/web/src/lib/: api.ts  ui-store.ts
clients/web/src/routes/: feed.tsx  home.tsx  job.tsx
libs/py/piratepod_core/: pyproject.toml
libs/py/piratepod_core/src/piratepod_core/: __init__.py  app.py  prompts.py  urls.py
libs/py/piratepod_core/tests/: test_urls.py
py/piratepod_core/: pyproject.toml
py/piratepod_core/src/piratepod_core/: __init__.py  app.py  logging.py
services/api/: go.mod  go.sum
services/api/cmd/api/: main.go
services/api/internal/auth/: auth.go
services/api/internal/config/: config.go
services/api/internal/db/: db.go  repo.go  repo_test.go
services/api/internal/orchestrate/: client.go
services/api/internal/pipeline/: client.go  client_test.go  worker.go
services/api/internal/server/: handlers.go  handlers_test.go  middleware.go  middleware_test.go  router.go
services/rss/: .dockerignore  Dockerfile  go.mod
services/rss/cmd/rss/: main.go
services/rss/internal/auth/: auth.go
services/rss/internal/config/: config.go  config_test.go
services/rss/internal/db/: db.go  repo.go
services/rss/internal/feed/: feed.go  feed_test.go
services/rss/internal/server/: handlers.go  handlers_test.go  middleware.go  router.go
services/rss/internal/storage/: local.go  storage.go
workers/audiogen/: pyproject.toml
workers/audiogen/src/audiogen/: app.py  config.py  routes.py  schemas.py  service.py
workers/ingest/: pyproject.toml
workers/ingest/src/ingest/: app.py  config.py  fetcher.py  routes.py  schemas.py  service.py
workers/ingest/tests/: conftest.py
workers/ingest/tests/integration/: test_ingest_url.py  test_ingest_url_live.py
workers/ingest/tests/unit/: test_service.py
workers/orchestrate/: pyproject.toml
workers/orchestrate/src/orchestrate/: app.py  config.py  db.py  routes.py  schemas.py  service.py  worker.py
workers/orchestrate/tests/unit/: test_db.py  test_schemas.py  test_service.py  test_worker.py
workers/research/: pyproject.toml
workers/scriptgen/: pyproject.toml
workers/scriptgen/src/scriptgen/: app.py  config.py  prompts.py  routes.py  schemas.py  service.py
workers/scriptgen/tests/unit/: test_service.py
(+11 files in other folders)
