[project]
name = "piratepod"
version = "0.0.0"
description = "Piratepod monorepo root"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ingest",
    "research",
    "scriptgen",
    "audiogen",
    "orchestrate",
]

[tool.uv]
package = false

[tool.uv.sources]
ingest = { workspace = true }
research = { workspace = true }
scriptgen = { workspace = true }
audiogen = { workspace = true }
orchestrate = { workspace = true }
piratepod-core = { workspace = true }

[tool.uv.workspace]
members = ["workers/*", "libs/py/*"]
