[project]
name = "piratepod-core"
version = "0.0.0"
description = "Shared runtime for PiratePod services"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "structlog>=24.4",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
